更新依赖版本, 优化代码, 去掉lombok改为getter setter, 增加实体类继承父类配置